# fastapi-ai-news-platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
tests/: conftest.py  test_api.py
toutiao_backend/: Dockerfile  docker-entrypoint.sh  main.py  test_main.http
toutiao_backend/cache/: news_cache.py
toutiao_backend/config/: __init__.py  ai_conf.py  cache_conf.py  db_conf.py  logging_conf.py  settings.py
toutiao_backend/crud/: __init__.py  favorite.py  history.py  news.py  news_cache.py  users.py
toutiao_backend/models/: __init__.py  ai_chat.py  base.py  favorite.py  history.py  news.py  related_news.py  users.py
toutiao_backend/routers/: __init__.py  ai.py  favorite.py  history.py  news.py  users.py
toutiao_backend/schemas/: __init__.py  ai.py  base.py  favorite.py  history.py  news.py  users.py
toutiao_backend/scripts/: __init__.py  seed_demo_data.py
toutiao_backend/utils/: __init__.py  auth.py  exception.py  exception_handlers.py  response.py  security.py
xwzx-news/: Dockerfile
xwzx-news/src/: App.vue  main.js
xwzx-news/src/components/: NewsItem.vue
xwzx-news/src/config/: api.js
xwzx-news/src/store/: user.js
xwzx-news/src/store/modules/: favorite.js  history.js  news.js
xwzx-news/src/utils/: formatTime.js  imageFallback.js  message.js  request.js
xwzx-news/src/views/: AIChat.vue  Favorite.vue  History.vue  Home.vue  Login.vue  NewsDetail.vue  Profile.vue  Register.vue
